Fix swagger bug docs not showing
